Fixed title spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,12 @@ a img:hover {
   width: 10%;
 }
 
+.title-table {
+  width: 100%;
+  border-collapse: collapse;
+  /* border: 1px solid rgb(36, 36, 36); */
+}
+
 .game-table {
   width: 100%;
   border-collapse: collapse;
